--- a/visualizacion_lozano.ipynb
+++ b/visualizacion_lozano.ipynb
@@ -924,7 +924,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "En este caso podemos mostrar a través de un hitograma la frecuencia absoluta asociada al número de registros relacionados con las variables en estudio, en este caso, podemos identificar que existe una diferencia de aproximadamente 15 mil registros entre las personas no fumadoras y fumadoras, sindo esta ultima la correspondiente al número más bajo de registros. Las graficas asociadas a las variables médicas epaticas AST, ALT, Gtp indican que la población en estudio se encuentra dentro del mismo rango con relación a sus analisis médicos asociados a estos parametros. "
+    "En este caso podemos mostrar a través de un histograma la frecuencia absoluta asociada al número de registros relacionados con las variables en estudio, en este caso, podemos identificar que existe una diferencia de aproximadamente 15 mil registros entre las personas no fumadoras y fumadoras, sindo esta ultima la correspondiente al número más bajo de registros. Las graficas asociadas a las variables médicas epaticas AST, ALT, Gtp indican que la población en estudio se encuentra dentro del mismo rango con relación a sus analisis médicos asociados a estos parametros. "
    ]
   },
   {
