--- a/visualizacion_lozano.ipynb
+++ b/visualizacion_lozano.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**<h1 style=\" text-align:center;\">Análisis sobre la incidencia del cigarrillo en la salud humana</h>**"
+    "**<h1 style=\" text-align:center;\">Análisis sobre la incidencia del cigarrillo en la salud</h>**"
    ]
   },
   {
